--- a/p/ssb.html
+++ b/p/ssb.html
@@ -1,51 +1,38 @@
-<!DOCTYPE html>
-<html>
-    <head>
+<html><head><style id="giscus-css">
+  .giscus, .giscus-frame {
+    width: 100%;
+    min-height: 150px;
+  }
+
+  .giscus-frame {
+    border: none;
+    color-scheme: normal;
+  }
+</style>
         <link rel="stylesheet" type="text/css" href="theme.css">
     </head>
 
-    <header>
+    <body><header>
         <center>
-            <h5>
-              <a href="/index.html">return home</a>
-            </h5>
+            
         </center>
 </header>
        
 
-    <wgTitle>
+    <wgtitle>
 Subway Surfers World Tour: Bali
-    </wgTitle>
-    <wgDev>
-by Kiloo & SYBO, uploaded by rm<br><br>
-if you want to play this on an iPad (safari), tap on the "aA" button on the top left of your screen, on the left side of the url box, then tap on "Request Mobile Site"
-    </wgDev> <br>
+    </wgtitle>
+     <br>
     <div class="wgHelp">
     </div>
-    <wgEmbed>
+    <wgembed>
         <iframe height="720" width="405" src="/017f9003-0089-43d4-8c75-9d5e69ea0bc7/content/00g.com/uploads/b/139890129-740932336170612268/files/index.html">
   
         </iframe>
-    </wgEmbed>
+    </wgembed>
 
-<Comments>
-    <script src="https://giscus.app/client.js"
-        data-repo="mathgames66/mathgames66.github.io"
-        data-repo-id="R_kgDOGdm08Q"
-        data-category="General"
-        data-category-id="DIC_kwDOGdm08c4CA4Ew"
-        data-mapping="pathname"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="dark"
-        data-lang="en"
-        crossorigin="anonymous"
-        async>
-</script>
-</Comments>
 
-<center>
-<img src='https://www.free-website-hit-counter.com/c.php?d=9&id=131796&s=7' border='0' >
-</center>
-</html>
+
+
+
+</body></html>
