--- a/p/drift-boss-v3.html
+++ b/p/drift-boss-v3.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
+<html><head><style id="giscus-css">
+  .giscus, .giscus-frame {
+    width: 100%;
+    min-height: 150px;
+  }
+
+  .giscus-frame {
+    border: none;
+    color-scheme: normal;
+  }
+</style>
         <link rel="stylesheet" type="text/css" href="theme.css">
     </head>
 
-    <header>
+    <body><header>
         <center>
             <h5>
                 <a href="/index.html">return home</a>
@@ -13,35 +21,18 @@
 </header>
        
 
-    <wgTitle>
+    <wgtitle>
 Drift Boss
-    </wgTitle>
-    <wgDev>
+    </wgtitle>
+    <wgdev>
 by MarketJS, uploaded by rm
-    </wgDev> <br>
+    </wgdev> <br>
     <div class="wgHelp">
     </div>
-    <wgEmbed>
-        <iframe frameBorder="1" scrolling="no" src="https://mathplayground.com/drift-boss-v3/index.html"></iframe>
-    </wgEmbed>
+    <wgembed>
+        <iframe frameborder="1" scrolling="no" src="https://mathplayground.com/drift-boss-v3/index.html"></iframe>
+    </wgembed>
 
-<Comments>
-    <script src="https://giscus.app/client.js"
-        data-repo="mathgames66/mathgames66.github.io"
-        data-repo-id="R_kgDOGdm08Q"
-        data-category="General"
-        data-category-id="DIC_kwDOGdm08c4CA4Ew"
-        data-mapping="pathname"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="dark"
-        data-lang="en"
-        crossorigin="anonymous"
-        async>
-</script>
-</Comments>
-<center>
-    <img src='https://www.free-website-hit-counter.com/c.php?d=9&id=131796&s=7' border='0' >
-    </center>
-</html>
+
+
+</body></html>
